// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity captures blueprint and pattern regressions for broken pattern fixture: broken pattern report 1`] = `
{
  "errors": [
    {
      "details": {
        "partType": "mystery_appendage",
        "requiredProperties": [],
        "requiredTags": [],
        "totalEntitiesChecked": 159,
      },
      "location": {
        "index": 0,
        "type": "pattern",
      },
      "message": "No entity definitions found for pattern 0",
      "severity": "error",
      "type": "PART_UNAVAILABLE",
    },
    {
      "details": {
        "partType": "wing",
        "requiredProperties": [],
        "requiredTags": [],
        "totalEntitiesChecked": 159,
      },
      "location": {
        "name": "phantom_socket",
        "type": "slot",
      },
      "message": "No entity definitions found for slot 'phantom_socket'",
      "severity": "error",
      "type": "PART_UNAVAILABLE",
    },
  ],
  "isValid": false,
  "metadata": undefined,
  "passed": [
    {
      "blueprint": {
        "id": "giant_spider",
        "root": "anatomy:spider_cephalothorax",
        "structureTemplate": "anatomy:structure_arachnid_8leg",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:giant_spider' found",
    },
    {
      "check": "body_descriptors",
      "message": "All 2 body descriptor(s) valid",
    },
    {
      "check": "component_existence",
      "message": "All 0 component references exist",
    },
    {
      "check": "generated_slot_part_availability",
      "message": "All 0 generated slot(s) from patterns have matching entity definitions",
    },
    {
      "check": "property_schemas",
      "message": "All 0 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 2 additionalSlot socket references valid",
    },
  ],
  "recipeId": "tests:broken_patterns",
  "recipePath": "tests/common/anatomy/fixtures/validation/broken_patterns.recipe.json",
  "suggestions": [
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "left_arm",
        "type": "slot",
      },
      "message": "Slot 'left_arm' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'tests:invalid_arm' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "phantom_socket",
        "type": "slot",
      },
      "message": "Slot 'phantom_socket' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'tests:phantom_wing' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "spinnerets",
        "type": "slot",
      },
      "message": "Slot 'spinnerets' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'tests:missing_spinneret' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
  ],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "availableSlots": [
        "leg_1",
        "leg_2",
        "leg_3",
        "leg_4",
        "leg_5",
        "leg_6",
        "leg_7",
        "leg_8",
        "pedipalp_1",
        "pedipalp_2",
        "posterior_torso",
        "venom_gland",
        "spinnerets",
      ],
      "fix": "Update matches array to use existing slot keys. Available: leg_1, leg_2, leg_3, leg_4, leg_5...",
      "location": {
        "description": "explicit matches [tail_cluster]",
        "index": 1,
        "type": "pattern",
      },
      "matcher": {
        "type": "v1_explicit",
        "value": [
          "tail_cluster",
        ],
      },
      "message": "Pattern explicit matches [tail_cluster] has no matching slots",
      "pattern": {
        "matches": [
          "tail_cluster",
        ],
        "partType": "tail",
        "preferId": "tests:tail_that_does_not_exist",
      },
      "reason": "None of the explicit slot keys undefined exist in blueprint",
      "severity": "warning",
      "type": "NO_MATCHING_SLOTS",
    },
    {
      "availableSlots": [
        "leg_1",
        "leg_2",
        "leg_3",
        "leg_4",
        "leg_5",
        "leg_6",
        "leg_7",
        "leg_8",
        "pedipalp_1",
        "pedipalp_2",
        "posterior_torso",
        "venom_gland",
        "spinnerets",
      ],
      "fix": "Adjust property filter criteria or add slots to blueprint that match the filter",
      "location": {
        "description": "matchesAll {"slotType":"leg","orientation":"*_front"}",
        "index": 2,
        "type": "pattern",
      },
      "matcher": {
        "type": "matchesAll",
        "value": {
          "orientation": "*_front",
          "slotType": "leg",
        },
      },
      "message": "Pattern matchesAll {"slotType":"leg","orientation":"*_front"} has no matching slots",
      "pattern": {
        "matchesAll": {
          "orientation": "*_front",
          "slotType": "leg",
        },
        "partType": "spider_leg",
        "preferId": "tests:missing_front_leg",
      },
      "reason": "Property filter {"slotType":"leg","orientation":"*_front"} does not match any blueprint slots",
      "severity": "warning",
      "type": "NO_MATCHING_SLOTS",
    },
    {
      "availableSlots": [
        "leg_1",
        "leg_2",
        "leg_3",
        "leg_4",
        "leg_5",
        "leg_6",
        "leg_7",
        "leg_8",
        "pedipalp_1",
        "pedipalp_2",
        "posterior_torso",
        "venom_gland",
        "spinnerets",
      ],
      "fix": "Add appendage with type 'unknown_group' to structure template 'anatomy:structure_arachnid_8leg' topology, or use a different slot group",
      "location": {
        "description": "matchesGroup 'appendage:unknown_group'",
        "index": 0,
        "type": "pattern",
      },
      "matcher": {
        "type": "matchesGroup",
        "value": "appendage:unknown_group",
      },
      "message": "Pattern matchesGroup 'appendage:unknown_group' has no matching slots",
      "pattern": {
        "matchesGroup": "appendage:unknown_group",
        "partType": "mystery_appendage",
        "preferId": "tests:mystery_appendage",
      },
      "reason": "Slot group 'appendage:unknown_group' not found in structure template 'anatomy:structure_arachnid_8leg' or produced 0 slots",
      "severity": "warning",
      "type": "NO_MATCHING_SLOTS",
    },
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "tests:broken_patterns" }",
        "recipeId": "tests:broken_patterns",
      },
      "message": "Recipe 'tests:broken_patterns' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity captures component/schema regressions for missing component fixture: missing component report 1`] = `
{
  "errors": [
    {
      "context": {
        "componentId": "0",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "0",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "0",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '0' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '0' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/0.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "1",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "1",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "1",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '1' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '1' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/1.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "10",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "10",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "10",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '10' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '10' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/10.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "11",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "11",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "11",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '11' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '11' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/11.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "12",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "12",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "12",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '12' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '12' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/12.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "13",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "13",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "13",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '13' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '13' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/13.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "14",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "14",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "14",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '14' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '14' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/14.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "15",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "15",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "15",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '15' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '15' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/15.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "16",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "16",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "16",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '16' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '16' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/16.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "17",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "17",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "17",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '17' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '17' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/17.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "18",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "18",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "18",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '18' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '18' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/18.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "19",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "19",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "19",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '19' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '19' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/19.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "2",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "2",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "2",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '2' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '2' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/2.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "20",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "20",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "20",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '20' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '20' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/20.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "21",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "21",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "21",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '21' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '21' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/21.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "22",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "22",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "22",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '22' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '22' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/22.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "23",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "23",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "23",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '23' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '23' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/23.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "3",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "3",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "3",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '3' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '3' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/3.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "4",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "4",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "4",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '4' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '4' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/4.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "5",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "5",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "5",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '5' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '5' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/5.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "6",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "6",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "6",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '6' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '6' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/6.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "7",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "7",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "7",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '7' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '7' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/7.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "8",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "8",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "8",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '8' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '8' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/8.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "9",
        "location": {
          "field": "properties",
          "name": "right_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "9",
        "context": "Recipe 'tests:missing_components', slot 'right_arm'",
        "fix": [
          "Create component at: data/mods/*/components/undefined.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "9",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "right_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component '9' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component '9' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/*/components/9.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "descriptors:imaginary_component",
        "location": {
          "field": "tags",
          "name": "left_arm",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "descriptors:imaginary_component",
        "context": "Recipe 'tests:missing_components', slot 'left_arm'",
        "fix": [
          "Create component at: data/mods/*/components/imaginary_component.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "descriptors:imaginary_component",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "left_arm",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component 'descriptors:imaginary_component' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component 'descriptors:imaginary_component' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/descriptors/components/imaginary_component.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "descriptors:nonexistent_component",
        "location": {
          "field": "properties",
          "name": "torso",
          "type": "slot",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "descriptors:nonexistent_component",
        "context": "Recipe 'tests:missing_components', slot 'torso'",
        "fix": [
          "Create component at: data/mods/*/components/nonexistent_component.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "descriptors:nonexistent_component",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "slot cannot be processed, anatomy generation will fail",
        "location": {
          "name": "torso",
          "type": "slot",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component 'descriptors:nonexistent_component' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component 'descriptors:nonexistent_component' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/descriptors/components/nonexistent_component.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "context": {
        "componentId": "descriptors:phantom_descriptor",
        "location": {
          "field": "properties",
          "index": 0,
          "name": "left_leg,right_leg",
          "type": "pattern",
        },
        "recipeId": "tests:missing_components",
      },
      "enhancedError": {
        "componentId": "descriptors:phantom_descriptor",
        "context": "Recipe 'tests:missing_components', pattern 'left_leg,right_leg'",
        "fix": [
          "Create component at: data/mods/*/components/phantom_descriptor.component.json",
          "",
          "Example Component Structure:",
          "{",
          "  "$schema": "schema://living-narrative-engine/component.schema.json",",
          "  "id": "descriptors:phantom_descriptor",",
          "  "description": "Component description",",
          "  "dataSchema": {",
          "    "type": "object",",
          "    "properties": { ... }",
          "  }",
          "}",
        ],
        "impact": "pattern cannot be processed, anatomy generation will fail",
        "location": {
          "name": "left_leg,right_leg",
          "type": "pattern",
        },
        "name": "ComponentNotFoundError",
        "problem": "Component 'descriptors:phantom_descriptor' does not exist in the component registry",
        "recipeId": "tests:missing_components",
        "recipePath": null,
        "references": [
          "docs/anatomy/anatomy-system-guide.md",
          "data/mods/anatomy/components/part.component.json (example)",
        ],
      },
      "message": "Component 'descriptors:phantom_descriptor' does not exist",
      "ruleId": "component-existence",
      "severity": "error",
      "suggestion": "Create component at: data/mods/descriptors/components/phantom_descriptor.component.json",
      "type": "COMPONENT_NOT_FOUND",
    },
    {
      "details": {
        "blueprintRequiredComponents": [
          "anatomy:part",
        ],
        "blueprintRequiredProperties": [],
        "partType": "leg",
        "patternIndex": 0,
        "requiredProperties": [
          "descriptors:phantom_descriptor",
        ],
        "requiredTags": [
          "anatomy:part",
        ],
        "slotKey": "left_leg",
        "totalEntitiesChecked": 159,
      },
      "fix": "Create an entity definition in data/mods/anatomy/entities/definitions/ with:
  - anatomy:part component with subType: "leg"
  - Required tags (pattern + blueprint): ["anatomy:part"]
  - Required property components: ["descriptors:phantom_descriptor"]",
      "location": {
        "pattern": "explicit matches [left_leg, right_leg]",
        "patternIndex": 0,
        "slotKey": "left_leg",
        "type": "generated_slot",
      },
      "message": "No entity definitions found for generated slot 'left_leg' (matched by pattern 0)",
      "severity": "error",
      "type": "GENERATED_SLOT_PART_UNAVAILABLE",
    },
    {
      "details": {
        "blueprintRequiredComponents": [
          "anatomy:part",
        ],
        "blueprintRequiredProperties": [],
        "partType": "leg",
        "patternIndex": 0,
        "requiredProperties": [
          "descriptors:phantom_descriptor",
        ],
        "requiredTags": [
          "anatomy:part",
        ],
        "slotKey": "right_leg",
        "totalEntitiesChecked": 159,
      },
      "fix": "Create an entity definition in data/mods/anatomy/entities/definitions/ with:
  - anatomy:part component with subType: "leg"
  - Required tags (pattern + blueprint): ["anatomy:part"]
  - Required property components: ["descriptors:phantom_descriptor"]",
      "location": {
        "pattern": "explicit matches [left_leg, right_leg]",
        "patternIndex": 0,
        "slotKey": "right_leg",
        "type": "generated_slot",
      },
      "message": "No entity definitions found for generated slot 'right_leg' (matched by pattern 0)",
      "severity": "error",
      "type": "GENERATED_SLOT_PART_UNAVAILABLE",
    },
    {
      "allowedValues": [
        "underweight",
        "lean",
        "average",
        "soft",
        "chubby",
        "overweight",
        "obese",
        "atrophied",
        "emaciated",
        "skeletal",
        "malnourished",
        "dehydrated",
        "wasted",
        "desiccated",
        "bloated",
        "rotting",
      ],
      "check": "body_descriptors",
      "field": "composition",
      "fix": "Use one of the allowed values: underweight, lean, average, soft, chubby, overweight, obese, atrophied, emaciated, skeletal, malnourished, dehydrated, wasted, desiccated, bloated, rotting",
      "message": "Invalid value 'ethereal' for body descriptor 'composition'",
      "severity": "error",
      "type": "INVALID_BODY_DESCRIPTOR_VALUE",
      "value": "ethereal",
    },
    {
      "allowedValues": [
        "skinny",
        "slim",
        "lissom",
        "toned",
        "athletic",
        "shapely",
        "hourglass",
        "thick",
        "muscular",
        "hulking",
        "stocky",
        "frail",
        "gaunt",
        "skeletal",
        "atrophied",
        "cadaverous",
        "massive",
        "willowy",
        "barrel-chested",
        "lanky",
      ],
      "check": "body_descriptors",
      "field": "build",
      "fix": "Use one of the allowed values: skinny, slim, lissom, toned, athletic, shapely, hourglass, thick, muscular, hulking, stocky, frail, gaunt, skeletal, atrophied, cadaverous, massive, willowy, barrel-chested, lanky",
      "message": "Invalid value 'impossibly-broad' for body descriptor 'build'",
      "severity": "error",
      "type": "INVALID_BODY_DESCRIPTOR_VALUE",
      "value": "impossibly-broad",
    },
    {
      "details": {
        "partType": "leg",
        "requiredProperties": [
          "descriptors:phantom_descriptor",
        ],
        "requiredTags": [],
        "totalEntitiesChecked": 159,
      },
      "location": {
        "index": 0,
        "type": "pattern",
      },
      "message": "No entity definitions found for pattern 0",
      "severity": "error",
      "type": "PART_UNAVAILABLE",
    },
    {
      "details": {
        "partType": "arm",
        "requiredProperties": [],
        "requiredTags": [
          "descriptors:imaginary_component",
        ],
        "totalEntitiesChecked": 159,
      },
      "location": {
        "name": "left_arm",
        "type": "slot",
      },
      "message": "No entity definitions found for slot 'left_arm'",
      "severity": "error",
      "type": "PART_UNAVAILABLE",
    },
    {
      "details": {
        "partType": "torso",
        "requiredProperties": [
          "descriptors:nonexistent_component",
        ],
        "requiredTags": [],
        "totalEntitiesChecked": 159,
      },
      "location": {
        "name": "torso",
        "type": "slot",
      },
      "message": "No entity definitions found for slot 'torso'",
      "severity": "error",
      "type": "PART_UNAVAILABLE",
    },
  ],
  "isValid": false,
  "metadata": undefined,
  "passed": [
    {
      "blueprint": {
        "id": "human_male",
        "root": "anatomy:human_male_torso",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:human_male' found",
    },
    {
      "check": "pattern_matching",
      "message": "All 1 pattern(s) have matching slots",
    },
    {
      "check": "property_schemas",
      "message": "All 26 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 0 additionalSlot socket references valid",
    },
  ],
  "recipeId": "tests:missing_components",
  "recipePath": "tests/common/anatomy/fixtures/validation/missing_components.recipe.json",
  "suggestions": [
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "left_arm",
        "type": "slot",
      },
      "message": "Slot 'left_arm' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'tests:missing_arm' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "right_arm",
        "type": "slot",
      },
      "message": "Slot 'right_arm' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'tests:missing_arm' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
  ],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "tests:missing_components" }",
        "recipeId": "tests:missing_components",
      },
      "message": "Recipe 'tests:missing_components' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity maintains parity for the giant forest spider recipe: valid spider report 1`] = `
{
  "errors": [],
  "isValid": true,
  "metadata": undefined,
  "passed": [
    {
      "message": "All slots have descriptor components",
    },
    {
      "blueprint": {
        "id": "giant_spider",
        "root": "anatomy:spider_cephalothorax",
        "structureTemplate": "anatomy:structure_arachnid_8leg",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:giant_spider' found",
    },
    {
      "check": "body_descriptors",
      "message": "All 3 body descriptor(s) valid",
    },
    {
      "check": "component_existence",
      "message": "All 9 component references exist",
    },
    {
      "check": "generated_slot_part_availability",
      "message": "All 11 generated slot(s) from patterns have matching entity definitions",
    },
    {
      "check": "part_availability",
      "message": "All slots and patterns have matching entity definitions",
    },
    {
      "check": "pattern_matching",
      "message": "All 3 pattern(s) have matching slots",
    },
    {
      "check": "property_schemas",
      "message": "All 5 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 2 additionalSlot socket references valid",
    },
  ],
  "recipeId": "anatomy:giant_forest_spider",
  "recipePath": "data/mods/anatomy/recipes/giant_forest_spider.recipe.json",
  "suggestions": [],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "anatomy:giant_forest_spider" }",
        "recipeId": "anatomy:giant_forest_spider",
      },
      "message": "Recipe 'anatomy:giant_forest_spider' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity maintains parity for the human male recipe: valid humanoid report 1`] = `
{
  "errors": [],
  "isValid": true,
  "metadata": undefined,
  "passed": [
    {
      "blueprint": {
        "id": "human_male",
        "root": "anatomy:human_male_torso",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:human_male' found",
    },
    {
      "check": "body_descriptors",
      "message": "All 4 body descriptor(s) valid",
    },
    {
      "check": "component_existence",
      "message": "All 1 component references exist",
    },
    {
      "check": "generated_slot_part_availability",
      "message": "All 4 generated slot(s) from patterns have matching entity definitions",
    },
    {
      "check": "part_availability",
      "message": "All slots and patterns have matching entity definitions",
    },
    {
      "check": "pattern_matching",
      "message": "All 2 pattern(s) have matching slots",
    },
    {
      "check": "property_schemas",
      "message": "All 1 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 0 additionalSlot socket references valid",
    },
  ],
  "recipeId": "anatomy:human_male",
  "recipePath": "data/mods/anatomy/recipes/human_male.recipe.json",
  "suggestions": [
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "head",
        "type": "slot",
      },
      "message": "Slot 'head' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'anatomy:human_male_head_bearded' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
  ],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "anatomy:human_male" }",
        "recipeId": "anatomy:human_male",
      },
      "message": "Recipe 'anatomy:human_male' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity records recipe usage suggestions for unused human clone fixture: unused clone usage hint 1`] = `
{
  "errors": [],
  "isValid": true,
  "metadata": undefined,
  "passed": [
    {
      "blueprint": {
        "id": "human_male",
        "root": "anatomy:human_male_torso",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:human_male' found",
    },
    {
      "check": "body_descriptors",
      "message": "All 3 body descriptor(s) valid",
    },
    {
      "check": "component_existence",
      "message": "All 0 component references exist",
    },
    {
      "check": "generated_slot_part_availability",
      "message": "All 4 generated slot(s) from patterns have matching entity definitions",
    },
    {
      "check": "part_availability",
      "message": "All slots and patterns have matching entity definitions",
    },
    {
      "check": "pattern_matching",
      "message": "All 2 pattern(s) have matching slots",
    },
    {
      "check": "property_schemas",
      "message": "All 0 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 0 additionalSlot socket references valid",
    },
  ],
  "recipeId": "tests:human_male_unused_clone",
  "recipePath": "tests/common/anatomy/fixtures/validation/unused_human_clone.recipe.json",
  "suggestions": [
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "head",
        "type": "slot",
      },
      "message": "Slot 'head' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'anatomy:humanoid_head' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "torso",
        "type": "slot",
      },
      "message": "Slot 'torso' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'anatomy:human_male_torso' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
  ],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "tests:human_male_unused_clone" }",
        "recipeId": "tests:human_male_unused_clone",
      },
      "message": "Recipe 'tests:human_male_unused_clone' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;

exports[`Recipe Validation Comparison Regression Suite CLI vs RecipeValidationRunner parity surfaces loader failures via CLI and validator with mocked matcher service: load failure propagation 1`] = `
{
  "errors": [
    {
      "details": {
        "error": "Invalid components: [anatomy:part, descriptors:shape_general] at data/body",
        "failedComponents": [
          "anatomy:part",
          "descriptors:shape_general",
        ],
        "file": "data/mods/anatomy/entities/broken.entity.json",
        "validationDetails": [
          {
            "component": "anatomy:part",
            "issue": "Component validation failed. Check schema requirements.",
          },
          {
            "component": "descriptors:shape_general",
            "issue": "Component validation failed. Check schema requirements.",
          },
        ],
      },
      "fix": "Fix validation errors:
    anatomy:part: Component validation failed. Check schema requirements.
    descriptors:shape_general: Component validation failed. Check schema requirements.",
      "location": {
        "file": "data/mods/anatomy/entities/broken.entity.json",
        "type": "entity_definition",
      },
      "message": "Entity definition 'data/mods/anatomy/entities/broken' failed to load due to component validation errors",
      "severity": "error",
      "type": "ENTITY_LOAD_FAILURE",
    },
  ],
  "isValid": false,
  "metadata": undefined,
  "passed": [
    {
      "blueprint": {
        "id": "human_male",
        "root": "anatomy:human_male_torso",
      },
      "check": "blueprint_exists",
      "message": "Blueprint 'anatomy:human_male' found",
    },
    {
      "check": "body_descriptors",
      "message": "All 4 body descriptor(s) valid",
    },
    {
      "check": "component_existence",
      "message": "All 1 component references exist",
    },
    {
      "check": "generated_slot_part_availability",
      "message": "All 4 generated slot(s) from patterns have matching entity definitions",
    },
    {
      "check": "part_availability",
      "message": "All slots and patterns have matching entity definitions",
    },
    {
      "check": "pattern_matching",
      "message": "All 2 pattern(s) have matching slots",
    },
    {
      "check": "property_schemas",
      "message": "All 1 property objects valid",
    },
    {
      "check": "socket_slot_compatibility",
      "message": "All 0 additionalSlot socket references valid",
    },
  ],
  "recipeId": "anatomy:human_male",
  "recipePath": "data/mods/anatomy/recipes/human_male.recipe.json",
  "suggestions": [
    {
      "impact": "Part will be excluded from anatomy description",
      "location": {
        "name": "head",
        "type": "slot",
      },
      "message": "Slot 'head' may not appear in descriptions",
      "reason": "No descriptor components in slot properties, and preferred entity 'anatomy:human_male_head_bearded' has no descriptors",
      "suggestion": "Add descriptor components (descriptors:size_category, descriptors:texture, etc.)",
      "type": "MISSING_DESCRIPTORS",
    },
  ],
  "timestamp": "<redacted>",
  "warnings": [
    {
      "check": "recipe_usage",
      "details": {
        "hint": "Entity definitions should have: "anatomy:body": { "recipeId": "anatomy:human_male" }",
        "recipeId": "anatomy:human_male",
      },
      "message": "Recipe 'anatomy:human_male' is not referenced by any entity definitions",
      "severity": "warning",
      "suggestion": "Verify that the recipeId matches what entity definitions expect",
      "type": "RECIPE_UNUSED",
    },
  ],
}
`;
